Поменял yml спеку для автогенерации кода с учетом передачи username для привязки к балансу. Поменял логику приложений, чтобы баланс списывался с пользователя.
